--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 node_modules
 /dist
 
+
 # local env files
+.env.local
+.env.*.local
 
 # Log files
 npm-debug.log*
@@ -11,4 +14,10 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Editor directories and files
-
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
